fix(3156115079): align the header's tabs to Figma design  (#297)

--- a/src/components/Containers/Header/Header.module.scss
+++ b/src/components/Containers/Header/Header.module.scss
@@ -44,7 +44,7 @@
 
     > div,
     > button {
-      margin-left: 25px;
+      margin-left: 24px;
     }
   }
 
